<?xml version="1.0" encoding="utf-8"?>
<!--Layout des Spiels-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/game_background"
    tools:context=".Activities.GameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--Textviews für Punktzahl-->
        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/score"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="11dp"
            android:textSize="24sp" />

    </LinearLayout>

    <!--Spielfeld Layout-->
    <FrameLayout
        android:id="@+id/frameGame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.1"
        android:background="@drawable/border" />

    <!--Steuerung vom Spiel-->
    <FrameLayout
        android:id="@+id/frameControls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:fitsSystemWindows="true">

        <ImageButton
            android:id="@+id/btnLeft"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_left"
            android:contentDescription="@string/left" />

        <ImageButton
            android:id="@+id/btnPause"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_pause"
            android:contentDescription="@string/pause" />

        <ImageButton
            android:id="@+id/btnRight"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:background="@drawable/btn_right"
            android:contentDescription="@string/right" />
    </FrameLayout>

</LinearLayout>